member popout head spacing fix

--- a/app/assets/stylesheets/channel.scss
+++ b/app/assets/stylesheets/channel.scss
@@ -200,6 +200,7 @@
     }
 
     .member-alias {
+      margin-top: 10px;
       font: {
         size: 16px;
         family: "Whitney Medium";
@@ -210,6 +211,7 @@
     .user {
       display: flex;
       flex-direction: row;
+      margin-top: 10px;
 
       h1 {
         font: {
